--- a/src/app/register/register.page.scss
+++ b/src/app/register/register.page.scss
@@ -55,6 +55,8 @@
       ion-label {
         color: #4a5568;
         font-weight: 500;
+        margin-bottom: 10px;
+        font-size: 16px; // Adjust font size if needed
       }
 
       ion-input {
